tests/parser/tests/cases/should_fail/malformed_access_name/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:4
1 |   a::b:c()
  |      ^ here
  = note: Expected an expression, however received a `:`.
